apps/staging/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - glance.christophervestman.com
      secretName: glance-tls
  rules:
    - host: glance.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: glance
                port:
                  number: 8080
            path: /
            pathType: Prefix
